logs/celebi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/asyncpg'...
Listing './lib/python3.5/site-packages/asyncpg/exceptions'...
Listing './lib/python3.5/site-packages/asyncpg/protocol'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/codecs'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/record'...
Listing './lib/python3.5/site-packages/asyncpg-0.11.0.dist-info'...
Listing './lib/python3.5/site-packages/celebi'...
Listing './lib/python3.5/site-packages/celebi/apis'...
Listing './lib/python3.5/site-packages/celebi/core'...
Listing './lib/python3.5/site-packages/celebi/core/middleware'...
Compiling './lib/python3.5/site-packages/celebi/core/types.py'...
***   File "./lib/python3.5/site-packages/celebi/core/types.py", line 21
    Maybe: GenericMeta = type("Maybe", (MaybeType, ), {})
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/celebi/core/wsgi.py'...
***   File "./lib/python3.5/site-packages/celebi/core/wsgi.py", line 12
    wsgi: BluePrint = BluePrint('/')
        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/celebi/io'...
Listing './lib/python3.5/site-packages/celebi/io/postgres'...
Compiling './lib/python3.5/site-packages/celebi/io/postgres/monitor.py'...
***   File "./lib/python3.5/site-packages/celebi/io/postgres/monitor.py", line 37
    for sql in sqls
    ^
SyntaxError: 'await' expressions in comprehensions are not supported

Listing './lib/python3.5/site-packages/celebi/io/qubit'...
Compiling './lib/python3.5/site-packages/celebi/io/qubit/entangle.py'...
***   File "./lib/python3.5/site-packages/celebi/io/qubit/entangle.py", line 48
    body: bytes = self.channel.basic_get(self.queue)[2]
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/celebi/io/qubit/monitor.py'...
***   File "./lib/python3.5/site-packages/celebi/io/qubit/monitor.py", line 29
    self.exchange: str = cfg.exchange
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/celebi/schema'...
Compiling './lib/python3.5/site-packages/celebi/schema/utils.py'...
***   File "./lib/python3.5/site-packages/celebi/schema/utils.py", line 17
    res = [await conn.execute(sql) for sql in drop_sqls + create_sqls]
          ^
SyntaxError: 'await' expressions in comprehensions are not supported

Listing './lib/python3.5/site-packages/celebi/types'...
Listing './lib/python3.5/site-packages/celebi/types/datatype'...
Listing './lib/python3.5/site-packages/celebi-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pika'...
Listing './lib/python3.5/site-packages/pika/adapters'...
Listing './lib/python3.5/site-packages/pika-0.11.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pulsar'...
Listing './lib/python3.5/site-packages/pulsar/apps'...
Listing './lib/python3.5/site-packages/pulsar/apps/data'...
Listing './lib/python3.5/site-packages/pulsar/apps/data/pulsards'...
Listing './lib/python3.5/site-packages/pulsar/apps/data/redis'...
Listing './lib/python3.5/site-packages/pulsar/apps/ds'...
Listing './lib/python3.5/site-packages/pulsar/apps/greenio'...
Listing './lib/python3.5/site-packages/pulsar/apps/http'...
Listing './lib/python3.5/site-packages/pulsar/apps/rpc'...
Listing './lib/python3.5/site-packages/pulsar/apps/socket'...
Listing './lib/python3.5/site-packages/pulsar/apps/test'...
Listing './lib/python3.5/site-packages/pulsar/apps/test/plugins'...
Listing './lib/python3.5/site-packages/pulsar/apps/test/plugins/htmlfiles'...
Listing './lib/python3.5/site-packages/pulsar/apps/test/plugins/htmlfiles/profile'...
Listing './lib/python3.5/site-packages/pulsar/apps/ws'...
Listing './lib/python3.5/site-packages/pulsar/apps/wsgi'...
Listing './lib/python3.5/site-packages/pulsar/async'...
Listing './lib/python3.5/site-packages/pulsar/utils'...
Listing './lib/python3.5/site-packages/pulsar/utils/structures'...
Listing './lib/python3.5/site-packages/pulsar/utils/system'...
Listing './lib/python3.5/site-packages/pulsar/utils/tools'...
Listing './lib/python3.5/site-packages/pulsar-1.6.4.dist-info'...
Listing './lib/python3.5/site-packages/pulsar_test'...
Listing './lib/python3.5/site-packages/pwsgi'...
Listing './lib/python3.5/site-packages/pwsgi-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
